# ml_health_insurance

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/preprocess/: n_test_data.pkl  n_train_data.pkl  ready_test_data.pkl  ready_train_data.pkl  test_data.pkl  train_data.pkl
model/: baseline_model.pkl  final_model_xgboost.pkl  randomforest_v1.pkl  xgboost.pkl  xgboost_v1.pkl
notebooks/: 00_EDA.ipynb  01_Split_Proprecessing_Data.ipynb  02_baseLineModel.ipynb  03_advanced_ModelSelection.ipynb  03_baselineModel.ipynb  04_AdvancedFeatureEngg.ipynb  05_hyperparamsModel.ipynb
src/: app.py
src/utils/: preprocessing.py  validate.py
